Use ATOMIC_FS_UPDATE

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,11 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 monitor_speed = 115200
+
+; uncomment to upload using OTA
+;upload_protocol = espota
+;upload_port = 192.168.1.xx ; your esp ip
+;upload_flags = --auth=default ; Upload using password
+
+build_flags = 
+    -DATOMIC_FS_UPDATE
